dynamically render projects

--- a/public/style.css
+++ b/public/style.css
@@ -70,7 +70,7 @@ li:nth-child(1) {
 	flex-wrap: wrap;
 }
 .project {
-	margin: 2%;
+	margin-bottom: 2%;
 	flex-basis: 43%;
 	font-family: "Bungee Hairline", cursive;
 	line-height: 120%;
