--- a/public/style.css
+++ b/public/style.css
@@ -202,3 +202,11 @@ li:nth-child(1) {
 .github > img {
 	width: 100%;
 }
+
+/* #pie {
+	border-radius: 0.5em;
+	margin: auto;
+	width: 200px;
+	height: 200px;
+	background-color: aqua;
+} */
