--- a/public/style.css
+++ b/public/style.css
@@ -128,10 +128,19 @@ li:nth-child(1) {
 .selected {
 	border: 1px solid #344a7a;
 
+	background: linear-gradient(#316241, #43744e);
+	box-shadow: inset 0 0 #3d3361, inset 0 2px 9px 1px #23314b;
+	color: #000000;
+	text-shadow: 0 1px #1b2839;
+}
+.disabled {
+	border: 1px solid #344a7a;
+
 	background: linear-gradient(#313c62, #434e74);
 	box-shadow: inset 0 0 #3d3361, inset 0 2px 9px 1px #23314b;
 	color: #000000;
 	text-shadow: 0 1px #1b2839;
+	opacity: 33%;
 }
 
 /* preview fade-in/out */
