--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,8 @@ body {
 	-moz-animation: fadeIn ease 5s;
 	-o-animation: fadeIn ease 5s;
 	-ms-animation: fadeIn ease 5s;
+	transition-property: background-position;
+	transition-duration: 5s;
 }
 
 header > * {
