--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,13 @@ body {
 	color: rgb(0, 0, 0);
 	overflow-x: hidden;
 }
+body::-webkit-scrollbar {
+	display: none;
+}
+body {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
 #background {
 	width: 100%;
 	height: 100%;
@@ -14,7 +21,9 @@ body {
 	top: 0px;
 	z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
 }
-
+#bg_clouds {
+	object-fit: cover;
+}
 .stretch {
 	width: 100%;
 	height: 100%;
@@ -43,7 +52,9 @@ body {
 }
 
 header > * {
-	margin: -1%;
+	margin: 1em;
+	margin-bottom: 0;
+	line-height: 2rem;
 }
 
 .filter,
@@ -53,7 +64,13 @@ header > * {
 	flex-wrap: wrap;
 	justify-content: center;
 	font-family: "Quantico", sans-serif;
+	padding: 1em;
 }
+.filter {
+	max-width: 800px;
+	margin: 0 auto;
+}
+
 .filter button,
 li {
 	list-style-type: none;
@@ -75,12 +92,17 @@ li:nth-child(1) {
 	flex-wrap: wrap;
 }
 .project {
+	flex-basis: 500px;
 	margin-bottom: 2%;
-	flex-basis: 45vw;
 	font-family: "Bungee Hairline", cursive;
 	line-height: 120%;
+	padding: 1em;
 }
-
+@media screen and (max-width: 666px) {
+	.project {
+		width: 95%;
+	}
+}
 .preview {
 	width: 100%;
 	border-radius: 5%;
@@ -211,7 +233,7 @@ li:nth-child(1) {
 }
 
 .github {
-	width: 5%;
+	width: 40px;
 	margin-left: 5%;
 }
 .github > img {
@@ -224,11 +246,10 @@ li:nth-child(1) {
 }
 
 .youtube {
-	position: absolute;
-	top: 0;
-	left: 0;
 	border-radius: 10px;
-
+	width: 100%;
+	height: 400px;
+	display: block;
 }
 
 .youtubeContainer {
@@ -236,5 +257,6 @@ li:nth-child(1) {
 	position: relative;
 	max-width: 800px;
 	margin: 0 auto;
-	margin-bottom: 10vh;
+	padding-left: 1em;
+	padding-right: 1em;
 }
