spacing for piechart and youtube

--- a/public/style.css
+++ b/public/style.css
@@ -244,7 +244,7 @@ li:nth-child(1) {
 }
 
 #pie {
-	margin: auto;
+	margin: 2em auto;
 	max-width: 800px;
 }
 
@@ -256,10 +256,10 @@ li:nth-child(1) {
 }
 
 .youtubeContainer {
-	padding-bottom: 30.25%;
+	/* padding-bottom: 30.25%; */
 	position: relative;
 	max-width: 800px;
-	margin: 0 auto;
+	margin: 2em auto;
 	padding-left: 1em;
 	padding-right: 1em;
 }
