--- a/public/style.css
+++ b/public/style.css
@@ -6,13 +6,13 @@ body {
 	color: rgb(0, 0, 0);
 	overflow-x: hidden;
 }
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
 	display: none;
 }
 body {
-	-ms-overflow-style: none; /* IE and Edge */
-	scrollbar-width: none; /* Firefox */
-}
+	-ms-overflow-style: none; /* IE and Edge 
+	scrollbar-width: none; /* Firefox 
+} */
 #noOverFlow{
 	overflow-x: hidden;
 }
