ascona, filter justify, project count,

--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ body {
 	-ms-overflow-style: none; /* IE and Edge 
 	scrollbar-width: none; /* Firefox 
 } */
-#noOverFlow{
+#noOverFlow {
 	overflow-x: hidden;
 }
 #background {
@@ -59,28 +59,27 @@ header > * {
 	margin-bottom: 0;
 	line-height: 2rem;
 }
-svg{
+svg {
 	color: rgba(27, 27, 27, 0.7);
-
 }
 .filter,
 .filter > button {
-	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
-	justify-content: center;
 	font-family: "Quantico", sans-serif;
 	padding: 1em;
 }
 .filter {
 	max-width: 1200px;
 	margin: 0 auto;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: stretch;
 }
 
 .filter button,
 li {
+	flex-grow: 1;
 	list-style-type: none;
-	display: inline;
+	display: block;
 	font-size: 1.1rem;
 	color: rgb(44, 44, 44);
 	padding: 0.25em;
@@ -104,9 +103,8 @@ li:nth-child(1) {
 	/* line-height: ; */
 	padding: 1em;
 }
-.project p{
+.project p {
 	font-size: 1.2rem;
-
 }
 @media screen and (max-width: 666px) {
 	.project {
